0.22.9	UNRELEASED

 * Fix ``porcelain.add()`` symlink handling to allow adding symlinks that point
   outside the repository. Previously, the function would fail when trying to
   add a symlink pointing outside the repo due to aggressive path resolution.
   Now only resolves the parent directory for symlinks, matching Git's behavior.
   (Jelmer Vernooĳ, #789)

 * Fix ``porcelain.add()`` when adding repository root path or directories.
   Previously, adding the repository path itself would incorrectly stage
   ``b'./'`` instead of the actual untracked files, leading to
   repository corruption.  (Jelmer Vernooĳ, #1178, #655)

 * Improve ``porcelain.add()`` documentation to correctly describe default
   behavior. (Jelmer Vernooĳ, #895)

 * Fix gitignore pattern matching for directory negation patterns. Patterns like
   ``!data/*/`` now correctly unignore direct subdirectories while still ignoring
   files in the parent directory, matching Git's behavior. The ``is_ignored()`` method
   now documents that directory paths should end with ``/`` for consistent behavior.
   (Jelmer Vernooĳ, #1203)

 * Support quote_path flag for ignore checking. (Jelmer Vernooĳ)

 * Add support for Git's ``feature.manyFiles`` configuration and index version 4.
   This enables faster Git operations in large repositories through path prefix
   compression (30-50% smaller index files) and optional hash skipping for faster
   writes. Supports ``feature.manyFiles``, ``index.version``, and ``index.skipHash``
   configuration options.
   (Jelmer Vernooĳ, #1061, #1462)

 * In dulwich.porcelain docstring, list functions by their Python identifiers.
   (Marnanel Thurman)

 * cli: add basic branch management commands (James Addison, #1514)

 * Fix wheels workflow. (Jelmer Vernooĳ)

 * ``Config.set`` replaces values by default, ``Config.add``
   appends them. (Jelmer Vernooĳ, #1545)

 * Support ``core.sshCommand`` setting.
   (Jelmer Vernooĳ, #1548)

 * Bump PyO3 to 0.25. (Jelmer Vernooĳ)
